--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-          git add trackers.txt output/pt_tracker_domain.txt output/pt_tracker_ip.txt
+          git add trackers_all.txt output/pt_tracker_domain.txt output/pt_tracker_ip.txt
           git commit -m "Update tracker list and split results - $(date +'%Y-%m-%d')"
           git push
         env:
