--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Split PT Tracker List
+name: 分类 PT 追踪器列表
 
 on:
   schedule:
@@ -7,33 +7,33 @@ on:
   
 permissions:
   contents: write  # 允许写入代码
-  
+
 jobs:
-  split-tracker:
+  classify-trackers:
     runs-on: ubuntu-latest
+
     steps:
-      # 检出代码
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: 检出代码
+        uses: actions/checkout@v4
 
-      # 下载最新的 tracker 列表（假设从某个 URL 获取）
-      - name: Download tracker list
+      - name: 解析 `trackers_all.txt` 并分类
         run: |
-          curl https://raw.githubusercontent.com/adysec/tracker/refs/heads/main/trackers_all.txt >> trackers_all.txt
-          
-          # 如果你有其他来源，可以在这里添加逻辑
+          # 确保文件存在
+          if [ ! -f trackers_all.txt ]; then
+            echo "trackers_all.txt 文件不存在！"
+            exit 1
+          fi
 
-      # 运行分类脚本
-      - name: Run split script
-        run: |
-          chmod +x scripts/split_tracker.sh
-          ./scripts/split_tracker.sh
+          # 提取 IP 地址（IPv4）
+          grep -Eo '([0-9]{1,3}\.){3}[0-9]{1,3}' trackers_all.txt | sort -u > output/pt_tracker_ip.txt
 
-      # 提交更改
-      - name: Commit and push changes
+          # 提取域名（去掉 http://、https://、udp://、wss://）
+          grep -Eo '(https?|udp|wss)://[^:/]+' trackers_all.txt | sed -E 's#(https?|udp|wss)://##' | sort -u > output/pt_tracker_domain.txt
+
+      - name: 提交更新
         run: |
           git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
-          git add trackers_all.txt output/pt_tracker_domain.txt output/pt_tracker_ip.txt
-          git commit -m "Update tracker list and split results - $(date +'%Y-%m-%d')"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add output/pt_tracker_ip.txt output/pt_tracker_domain.txt
+          git commit -m "更新 tracker 列表 - $(date +'%Y-%m-%d')" || echo "No changes to commit"
           git push
