--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Download tracker list
         run: |
-          curl -o trackers.txt "https://raw.githubusercontent.com/ngosang/trackerslist/master/trackers_all.txt"
+          curl -o trackers_all.txt "https://raw.githubusercontent.com/ngosang/trackerslist/master/trackers_all.txt"
 
       - name: Run split script
         run: |
@@ -28,6 +28,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-          git add trackers.txt output/pt_tracker_domain.txt output/pt_tracker_ip.txt
+          git add trackers_all.txt output/pt_tracker_domain.txt output/pt_tracker_ip.txt
           git commit -m "Update tracker list and split results - $(date +'%Y-%m-%d')"
           git push
