--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:  # 允许手动触发
+  workflow_dispatch:
 
 jobs:
   split-tracker:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # 确保有写入权限
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -19,7 +19,7 @@ jobs:
         run: |
           curl -o trackers_all.txt "https://raw.githubusercontent.com/ngosang/trackerslist/master/trackers_all.txt"
           echo "Downloaded trackers_all.txt"
-          cat trackers_all.txt  # 调试：显示下载内容
+          cat trackers_all.txt
 
       - name: Run split script
         run: |
@@ -38,5 +38,6 @@ jobs:
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add trackers_all.txt output/pt_tracker_domain.txt output/pt_tracker_ip.txt
-          git commit -m "Update trackers_all.txt and split results - $(date +'%Y-%m-%d')" || echo "No changes to commit"
+          git commit -m "Update trackers_all.txt and split results - $(date +'%Y-%m-%d')" --allow-empty
           git push
+          echo "Push completed with status: $?"
