--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,9 @@
 name: Split Tracker List
-
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-
 jobs:
   split-tracker:
     runs-on: ubuntu-latest
@@ -19,33 +17,19 @@ jobs:
         run: |
           curl -o trackers_all.txt "https://raw.githubusercontent.com/ngosang/trackerslist/master/trackers_all.txt"
           echo "Downloaded trackers_all.txt"
-          ls -la  # 检查文件是否存在
-          cat trackers_all.txt || echo "trackers_all.txt is empty or not downloaded"
+          ls -la
+          head -n 10 trackers_all.txt  # 显示前10行确认内容
 
       - name: Run split script
         run: |
           chmod +x scripts/split_tracker.sh
           ./scripts/split_tracker.sh
-          echo "Script completed"
-
-      - name: Check output files
-        run: |
-          echo "Checking current directory:"
-          ls -la
-          echo "Checking output directory:"
-          ls -la output/ || echo "Output directory not found"
-          echo "Domain file content:"
-          cat output/pt_tracker_domain.txt || echo "Domain file empty or not created"
-          echo "IP file content:"
-          cat output/pt_tracker_ip.txt || echo "IP file empty or not created"
+          ls -la output/  # 确认输出文件
 
       - name: Commit and push changes
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-          git status  # 显示待提交的变化
           git add trackers_all.txt output/pt_tracker_domain.txt output/pt_tracker_ip.txt
-          git status  # 确认文件已暂存
-          git commit -m "Update trackers_all.txt and split results - $(date +'%Y-%m-%d')" --allow-empty
+          git commit -m "Update split tracker results - $(date +'%Y-%m-%d')"
           git push
-          echo "Push completed with status: $?"
