--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 name: Split Tracker List
+
 on:
   push:
     branches:
       - main
   workflow_dispatch:
+
 jobs:
   split-tracker:
     runs-on: ubuntu-latest
@@ -18,18 +20,20 @@ jobs:
           curl -o trackers_all.txt "https://raw.githubusercontent.com/ngosang/trackerslist/master/trackers_all.txt"
           echo "Downloaded trackers_all.txt"
           ls -la
-          head -n 10 trackers_all.txt  # 显示前10行确认内容
+          head -n 10 trackers_all.txt || echo "trackers_all.txt is empty"
 
       - name: Run split script
         run: |
           chmod +x scripts/split_tracker.sh
           ./scripts/split_tracker.sh
-          ls -la output/  # 确认输出文件
+          ls -la output/ || echo "No output directory created"
+          cat output/pt_tracker_domain.txt || echo "Domain file not created"
+          cat output/pt_tracker_ip.txt || echo "IP file not created"
 
       - name: Commit and push changes
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add trackers_all.txt output/pt_tracker_domain.txt output/pt_tracker_ip.txt
-          git commit -m "Update split tracker results - $(date +'%Y-%m-%d')"
-          git push
+          git commit -m "Update trackers_all.txt and split results - $(date +'%Y-%m-%d')" || echo "Nothing to commit"
+          git push || echo "Push failed"
