--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
       - name: Classify trackers
         run: |
           mkdir -p output
-          # 提取 IP 地址（IPv4）
-          grep -Eo '([0-9]{1,3}\.){3}[0-9]{1,3}' trackers_all.txt | sort -u > output/pt_tracker_ip.txt
-          # 提取域名
-          grep -Eo '(https?|udp|wss)://[^:/]+' trackers_all.txt | sed -E 's#(https?|udp|wss)://##' | sort -u > output/pt_tracker_domain.txt
+          # 提取 IP 地址（IPv4 和 IPv6）
+          grep -Eo '([0-9]{1,3}\.){3}[0-9]{1,3}|\[?[0-9a-fA-F:]+:?[0-9a-fA-F:]*\]?' trackers_all.txt | sed 's/^\[\(.*\)\]$/\1/' | sort -u > output/pt_tracker_ip.txt
+          # 提取域名（排除 IP）
+          grep -Eo '(https?|udp|wss)://[^:/]+' trackers_all.txt | sed -E 's#(https?|udp|wss)://##' | grep -vE '([0-9]{1,3}\.){3}[0-9]{1,3}|\[?[0-9a-fA-F:]+:?[0-9a-fA-F:]*\]?' | sort -u > output/pt_tracker_domain.txt
           ls -la output/
           cat output/pt_tracker_ip.txt || echo "IP file empty"
           cat output/pt_tracker_domain.txt || echo "Domain file empty"
@@ -36,5 +36,5 @@ jobs:
           git config --global user.name "GitHub Action"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add trackers_all.txt output/pt_tracker_ip.txt output/pt_tracker_domain.txt
-          git commit -m "Update trackers_all.txt and split results - $(date +'%Y-%m-%d')" || echo "Nothing to commit"
+          git commit -m "Update trackers_all.txt and split results - $(date +'%Y-%m-%d')" --allow-empty
           git push
